<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">搜聊</string>
   	<string name="blank_description"></string>
    <string name="login_header_image">登录头像</string>
    <string name="login">登录</string>
    <string name="username_phone_email">用户名/手机号码/邮箱</string>
    <string name="please_input_password">请输入密码</string>
    <string name="quit">退出</string>
    <string name="system_setting">系统设置</string>
    <string name="update_path">更新地址</string>
    <string name="online_update">在线更新</string>
    <string name="chat">会话</string>
    <string name="address_book">通信录</string>
    <string name="discovery">发现</string>
    <string name="myself">我的</string>
    <string name="please_input">请输入...</string>
    <string name="register">注册</string>
</resources>
