<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView 
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:visibility="gone"
        android:background="#ED9121"/>

    <ImageView
        android:id="@+id/iv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/login_header" 
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/login_header_image"/>

    <ImageView 
        android:id="@+id/ivLoginName"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_below="@id/iv_header"
        android:layout_alignParentLeft="true"
        android:src="@drawable/sign_username"
        android:contentDescription="@string/blank_description"/>
    
    <EditText
        android:id="@+id/et_login_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_header"
        android:layout_alignParentLeft="true"
        android:paddingLeft="50dp"   
        android:hint="@string/username_phone_email">
    </EditText>
    
    <ImageView 
        android:id="@+id/ivLoginPassword"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_below="@id/ivLoginName"
        android:layout_alignParentLeft="true"
        android:src="@drawable/sign_password"
        android:contentDescription="@string/blank_description"/>    

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_login_name"
        android:inputType="textPassword"
        android:paddingLeft="50dp"
        android:hint="@string/please_input_password"/>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_login_password"
        android:text="@string/login"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:onClick="signInAction" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/register"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:onClick="openRegister"
        android:background="#FFF"/>

</RelativeLayout>