<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8FF">
    
    <TextView 
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:visibility="gone"
        android:background="#ED9121"/>
    <!-- 
    <LinearLayout 
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tvMessage"
        android:background="#404040">
		
		<Button
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="#404040"
		    android:textColor="#FFFFFF"
		    android:text="我的"
		    android:textSize="14sp"/>
		
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"/>
		
		<Button 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="#404040"
		    android:textColor="#FFFFFF"
		    android:text="后退"
		    android:textSize="14sp"/>
    </LinearLayout>
    -->
    
    <android.support.v4.view.ViewPager
        android:id="@+id/vpMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvMessage">
    </android.support.v4.view.ViewPager>
    
<!--     <LinearLayout
        android:id="@+id/lyContent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"> 
        
    </LinearLayout>-->

    <LinearLayout 
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF">
		
		<Button
		    android:id="@+id/btnChat"
		    style="@style/homeview_button_style"
		    android:drawableTop="@drawable/main_chat"
		    android:onClick="setPage"
		    android:text="@string/chat"/>
		
		<Button 
		    android:id="@+id/btnAddrBook"
		    style="@style/homeview_button_style"
		    android:drawableTop="@drawable/main_addrbook"
		    android:text="@string/address_book"
		    android:onClick="setPage"/>
		
		<Button 
		    android:id="@+id/btnDiscovery"
		    style="@style/homeview_button_style"
		    android:drawableTop="@drawable/main_discovery"
		    android:text="@string/discovery"
		    android:onClick="setPage"/>
		
		<Button 
		    android:id="@+id/btnMyself"
		    style="@style/homeview_button_style"
		    android:drawableTop="@drawable/main_myself"
		    android:text="@string/myself"
		    android:onClick="setPage"/>
		
    </LinearLayout>
    
</RelativeLayout>